--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate-sitemap": "node scripts/generateSitemap.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^3.9.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.0",
